<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    android:foregroundTint="@color/light_orange"
    tools:context=".DashboardCaregiver">


  <GridLayout
      android:id="@+id/menuGrid"
      android:layout_width="371dp"
      android:layout_height="373dp"
      android:alignmentMode="alignMargins"
      android:columnCount="2"
      android:gravity="center"
      android:padding="16dp"
      android:rowCount="3"
      android:useDefaultMargins="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/dashboard_icon_caregiver"

        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        android:id="@+id/caregiver_profile"
        >

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="3.8dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/myself"
          android:textColor="@color/creme"
          android:textSize="21sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="117dp"
          android:layout_height="125dp"
          android:contentDescription="@string/todo"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.17"
          app:srcCompat="@drawable/myself_icon_caregiver" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/dashboard_icon_caregiver"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:focusable="true"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:id="@+id/caregiver_patients">

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="3.8dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/my_patients"
          android:textColor="@color/creme"
          android:textSize="21sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="117dp"
          android:layout_height="125dp"
          android:contentDescription="@string/todo"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.16"
          app:srcCompat="@drawable/my_patients_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/caregiver_requests"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:background="@drawable/dashboard_icon_caregiver"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:onClick="on_Caregiver_requests_Click">

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="3.8dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/requests"
          android:textColor="@color/creme"
          android:textSize="21sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <ImageView
          android:id="@+id/imageView5"
          android:layout_width="117dp"
          android:layout_height="125dp"
          android:contentDescription="@string/todo"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.16"
          app:srcCompat="@drawable/requests_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>


  </GridLayout>

  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="144dp"
      android:contentDescription="@string/todo"
      android:translationX="430dp"
      android:translationY="210dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:srcCompat="@drawable/bottom_flora1_caregiver" />

  <ImageView
      android:id="@+id/imageView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/todo"
      app:srcCompat="@drawable/top_flora1_caregiver"
      tools:layout_editor_absoluteX="146dp"
      tools:layout_editor_absoluteY="162dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="parent"
      android:translationX="127dp"
      android:translationY="195dp"
      />

  <TextView
      android:id="@+id/txtWelcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="128dp"
      android:text="@string/welcome_back"
      android:textSize="26sp"
      android:textStyle="bold"
      android:gravity="center"
      android:lineSpacingExtra="4sp"
      app:layout_constraintBottom_toTopOf="@+id/menuGrid"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnLogout"
      android:layout_width="111dp"
      android:layout_height="49dp"
      android:layout_marginStart="31dp"
      android:layout_marginEnd="37dp"
      android:layout_marginBottom="24dp"
      android:background="@drawable/logout_btn_caregiver"
      android:backgroundTint="#46494C"
      android:text="@string/log_out"
      android:textColor="#FFFBFB"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"></LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>