<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF5EF"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_in"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginBottom="47dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="98dp"
            android:layout_height="48dp"
            android:background="#9E8AB7"
            android:text="@string/sign_in"
            android:textColorLink="#EDEDED" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:background="#46494C"
            android:text="@string/sign_up"
            android:textColor="#F4E3E3"
            android:textColorLink="#A94949" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="134dp"
        android:layout_height="0dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_logo" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EMAIL" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="#CADCBD"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PASSWORD" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="#E4E9D6"
            android:backgroundTint="#CADCBD"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/cbxPassword"
            android:layout_width="155dp"
            android:layout_height="48dp"
            android:text="View Password" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
